--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,60 @@
-# Ignore environment variable files
-.env
-.env.local
-.env.*.local
-
-# Ignore virtual environment directories
-venv/
-.venv/
-
-# Ignore compiled Python files
+# Python cache
 __pycache__/
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
+*.pyc
+*.pyd
+*.pdb
+*.egg-info/
+*.eggs/
+*.manifest
+*.spec
 
-# Ignore log files and temporary files
+# Virtual environment
+.venv/
+venv/
+ENV/
+env/
+*.env
+
+# VSCode settings
+.vscode/
+*.code-workspace
+
+# Alembic
+alembic/versions/*.pyc
+alembic/versions/*.pyo
+alembic/versions/__pycache__/
+
+# Logs
 *.log
-*.tmp
-*.swp
+
+# Byte-compiled / optimized / DLL files
+*.so
+*.dll
+*.dylib
+
+# Distribution / packaging
+build/
+dist/
+pip-wheel-metadata/
+*.egg
+.eggs/
+
+# Unit test / coverage reports
+.coverage
+.tox/
+.nox/
+.pytest_cache/
+
+# SQLite or other local DBs
+*.db
+*.sqlite3
+
+# OS specific files
 .DS_Store
 Thumbs.db
 
-# Ignore Jupyter Notebook checkpoints (if using Jupyter)
-.ipynb_checkpoints/
-
-# Ignore system files (optional)
-.idea/          # JetBrains IDE (PyCharm)
-.vscode/        # VS Code settings
-.env
-
-# Ignore error explanation file
-#error_code_explain.txt
-
-# Ignore test_case folder
-test_case/
-test/
-
-# ----------------------------
-# ✅ Ensure Jenkinsfile is tracked
-!Jenkinsfile
-
-# Ignore alembic migrations
-alembic/
-alembic.ini
+# Other
+*.bak
